--- a/PYTN_Assgn_2_PYTN075ONL002_FarahShafira.ipynb
+++ b/PYTN_Assgn_2_PYTN075ONL002_FarahShafira.ipynb
@@ -2810,7 +2810,7 @@
     "\n",
     "Your conclusion below are graded. (1 Points)\n",
     "\n",
-    "**Seen in the result that P-value of B1 is smaller than B2, then null hypothesis is incorrect and alternative hypothesis the correct one**"
+    "**Seen in the result that P-value of B1 is smaller than B2, then null hypothesis is incorrect and alternative hypothesis is the correct one**"
    ]
   }
  ],
